--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
 <body>
  
 <section>
-    <div class="half-1">
+    <div >
         <h1 >Welcome To</h1>
         <h1 > <span class="orange">Farzana's</span> Blank Portfolio!!!<h1>
     
         <h3>Undergraduate Student at BRAC University</h3>
         <p>Still don't know what to do about life even though she wants to do a lot.Still don't know what to do about life even though she wants to do a lot.Still don't know what to do about life even though she wants to do a lot.Still don't know what to do about life even though she wants to do a lot.</p>
-        </div>
+         <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl">mail me</a>
+    </div>
+
         
-        <div>
+        <div class="half-1">
         <img src="images/my-bg.png" alt="" >
     </div>
 </section>
