--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 </head>
 <body>
  
-<section>
+<section class="top">
     <div >
         <h1 >Welcome To</h1>
         <h1 > <span class="orange">Farzana's</span> Blank Portfolio!!!<h1>
     
         <h3>Undergraduate Student at BRAC University</h3>
         <p>Still don't know what to do about life even though she wants to do a lot.Still don't know what to do about life even though she wants to do a lot.Still don't know what to do about life even though she wants to do a lot.Still don't know what to do about life even though she wants to do a lot.</p>
-         <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl">mail me</a>
+         <a class="link-button" target="_blank" href="https://mail.google.com/mail/u/0/?tab=rm&ogbl">mail me</a>
     </div>
 
         
